# TensorRT-API

./: .gitignore  README.md
costRegNet/: .gitignore  CMakeLists.txt  README.md
costRegNet/include/: cost_reg_net.h
costRegNet/src/: cost_reg_net.cpp  main.cpp
featurenet/: CMakeLists.txt  featurenet.wts  key_val.txt  layers.txt
featurenet/include/: featurenet.h
featurenet/src/: featurenet.cpp  main.cpp
featurenet/weights/: featurenet.wts
multigrain/: CMakeLists.txt  README.md
multigrain/include/: ClampingPlugin.h  ClampingPluginKernel.h  MGPluginFactory.h  common.h  multigrain.h
multigrain/pytorch-multigrain/: gen_wts.py  multigrain.py
multigrain/src/: ClampingPlugin.cpp  ClampingPluginKernel.cu  MGPluginFactory.cpp  main.cpp  multigrain.cpp
neural-network/include/backbones/hrnet-backbone/: hrnet_backbone.h
neural-network/include/common/: common.h
neural-network/include/heads/: mask_head.h  rpn.h
neural-network/include/logger/: logger.h
neural-network/include/necks/: hrfpn.h
neural-network/include/plugins/: logs.h  plugin_factory.h
neural-network/include/plugins/interpolation/: interpolation.h
neural-network/include/tensorrt-base/: tensorrt_base.h
neural-network/src/backbones/hrnet-backbone/: hrnet_backbone.cpp
neural-network/src/common/: common.cpp
neural-network/src/heads/: mask_head.cpp  rpn.cpp
neural-network/src/necks/: hrfpn.cpp
neural-network/src/plugins/: plugin_factory.cpp
neural-network/src/plugins/interpolation/: interpolation.cpp  interpolation_kernel.cu
neural-network/src/tensorrt-base/: tensorrt_base.cpp
resnet34/: CMakeLists.txt  README.md
resnet34/include/: resnet34.h
resnet34/pytorch-resnet34/: gen_wts.py
resnet34/src/: main.cpp  resnet34.cpp
resnet50/: CMakeLists.txt
resnet50/include/: resnet50.h
resnet50/pytorch-resnet50/: gen_wts.py
resnet50/src/: main.cpp  resnet50.cpp
simple/: CMakeLists.txt
simple/include/: simple.h
simple/pytorch-code/: gen_wts.py  weight.pth
simple/pytorch-code/model/: simple.py
simple/src/: main.cpp  simple.cpp
